Add rustic type operators

--- a/src/assets/index.css
+++ b/src/assets/index.css
@@ -96,7 +96,7 @@ a[data-preview-anchor] {
   text-decoration-color: var(--main-subtle);
 }
 
-dfn>a {
+dfn>a[data-preview-anchor] {
   text-decoration: none;
 }
 
